--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-jdbc:4.48'
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.android.support:design:26.+'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
