--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,23 @@
     package="com.example.guanhuawu.directory_demo">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Directory">
+        <activity android:name=".Directory" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddContacts" />
-        <activity android:name=".UpdateAndDeleteContacts" />
-        <activity android:name=".ShowDetailMessage"></activity>
+        <activity android:name=".AddContacts" android:launchMode="singleTask" />
+        <activity android:name=".UpdateAndDeleteContacts" android:launchMode="singleTask"/>
+        <activity android:name=".ShowDetailMessage" android:launchMode="singleTask"></activity>
     </application>
 
 </manifest>
